--- a/MyBrew/Base.lproj/Main.storyboard
+++ b/MyBrew/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="RDb-0j-ayA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="RDb-0j-ayA">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -57,7 +57,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BeerCell" rowHeight="508" id="oyD-a3-pNi" customClass="MyBeerCell" customModule="MyBrew" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BeerCell" rowHeight="508" id="oyD-a3-pNi" customClass="MyBeerCell" customModule="MyBrew" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="600" height="508"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oyD-a3-pNi" id="FkM-h9-6fz">
@@ -65,34 +65,29 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zH8-bb-xWQ" customClass="RotatedView" customModule="MyBrew" customModuleProvider="target">
-                                            <rect key="frame" x="28" y="15" width="544" height="165"/>
+                                            <rect key="frame" x="28" y="18" width="544" height="120"/>
                                             <color key="backgroundColor" red="0.20275660400000001" green="1" blue="0.97268543620000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="165" id="XFi-n4-QWX"/>
+                                                <constraint firstAttribute="height" constant="120" id="XFi-n4-QWX"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DRa-6r-0QK">
-                                            <rect key="frame" x="28" y="188" width="544" height="310"/>
+                                            <rect key="frame" x="28" y="148" width="544" height="340"/>
                                             <color key="backgroundColor" red="0.52549019610000003" green="0.4549019608" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="310" id="XoM-Jv-gfm"/>
+                                                <constraint firstAttribute="height" constant="340" id="XoM-Jv-gfm"/>
                                             </constraints>
                                         </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="DRa-6r-0QK" firstAttribute="top" secondItem="FkM-h9-6fz" secondAttribute="topMargin" constant="180" identifier="ContainerViewTop" id="2lP-vY-Hm1"/>
+                                        <constraint firstItem="DRa-6r-0QK" firstAttribute="top" secondItem="FkM-h9-6fz" secondAttribute="topMargin" constant="140" identifier="ContainerViewTop" id="2lP-vY-Hm1"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="DRa-6r-0QK" secondAttribute="trailing" constant="20" id="5oP-s4-rD8"/>
-                                        <constraint firstItem="zH8-bb-xWQ" firstAttribute="top" secondItem="FkM-h9-6fz" secondAttribute="topMargin" constant="7" identifier="ForegroundViewTop" id="Blx-ls-Xzz"/>
+                                        <constraint firstItem="zH8-bb-xWQ" firstAttribute="top" secondItem="FkM-h9-6fz" secondAttribute="topMargin" constant="10" identifier="ForegroundViewTop" id="Blx-ls-Xzz"/>
                                         <constraint firstItem="zH8-bb-xWQ" firstAttribute="leading" secondItem="FkM-h9-6fz" secondAttribute="leadingMargin" constant="20" id="CDd-sf-PeB"/>
                                         <constraint firstItem="DRa-6r-0QK" firstAttribute="leading" secondItem="FkM-h9-6fz" secondAttribute="leadingMargin" constant="20" id="KOj-Ds-RFQ"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="zH8-bb-xWQ" secondAttribute="trailing" constant="20" id="ycI-PZ-XxN"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="itemCount">
-                                        <integer key="value" value="4"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <outlet property="containerView" destination="DRa-6r-0QK" id="GyM-Ls-O8R"/>
                                     <outlet property="foregroundView" destination="zH8-bb-xWQ" id="7KJ-4Z-lFI"/>
@@ -137,10 +132,10 @@
             </objects>
             <point key="canvasLocation" x="2220" y="2106"/>
         </scene>
-        <!--Discover-->
+        <!--Discover Table View Controller-->
         <scene sceneID="Bz4-89-dEn">
             <objects>
-                <tableViewController storyboardIdentifier="DiscoverTableViewController" id="3A5-rC-2yV" customClass="DiscoverTableViewController" customModule="MyBrew" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="DiscoverTableViewController" id="3A5-rC-2yV" userLabel="Discover Table View Controller" customClass="DiscoverTableViewController" customModule="MyBrew" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="200" sectionHeaderHeight="28" sectionFooterHeight="28" id="bs7-PR-EYO">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -153,13 +148,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="558"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O4x-4Z-Dhb" customClass="RotatedView" customModule="MyBrew" customModuleProvider="target">
-                                            <rect key="frame" x="20" y="10" width="560" height="120"/>
-                                            <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="120" id="nTg-GL-BNL"/>
-                                            </constraints>
-                                        </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aky-TJ-e25">
                                             <rect key="frame" x="20" y="140" width="560" height="400"/>
                                             <subviews>
@@ -204,11 +192,11 @@
                                                             <rect key="frame" x="0.0" y="28" width="560" height="55"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fZM-HC-HpI" id="BJt-zM-BEe">
-                                                                <rect key="frame" x="0.0" y="0.0" width="527" height="54"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="527" height="54.5"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NW8-8M-HZi">
-                                                                        <rect key="frame" x="8" y="16" width="511" height="21"/>
+                                                                        <rect key="frame" x="8" y="17" width="511" height="20.5"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                         <nil key="highlightedColor"/>
@@ -228,11 +216,11 @@
                                                             <rect key="frame" x="0.0" y="83" width="560" height="55"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YIq-Ul-RSc" id="jbx-r6-dhQ">
-                                                                <rect key="frame" x="0.0" y="0.0" width="521" height="54"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="521" height="54.5"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Answer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lka-ag-DeX">
-                                                                        <rect key="frame" x="38" y="16" width="475" height="21"/>
+                                                                        <rect key="frame" x="38" y="17" width="475" height="20.5"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                         <nil key="highlightedColor"/>
@@ -264,6 +252,13 @@
                                                 <constraint firstItem="H8b-Sj-1Ct" firstAttribute="leading" secondItem="Aky-TJ-e25" secondAttribute="leading" id="g4a-2b-lMh"/>
                                                 <constraint firstItem="jDR-ji-nAG" firstAttribute="top" secondItem="pEc-re-wdF" secondAttribute="bottom" id="hSw-UF-1wl"/>
                                                 <constraint firstAttribute="height" constant="400" identifier="questionCellHeight" id="uoe-53-XMI"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O4x-4Z-Dhb" customClass="RotatedView" customModule="MyBrew" customModuleProvider="target">
+                                            <rect key="frame" x="20" y="10" width="560" height="120"/>
+                                            <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="120" id="nTg-GL-BNL"/>
                                             </constraints>
                                         </view>
                                     </subviews>
